@@ -1377,9 +1377,11 @@ attacks another MOB.  Lastly, leaders have the privilege of \
 the ORDER command, to keep the followers in line.  The number \
 of followers one may have depends upon their Charisma score.\n\r\
 \n\r\
-Use FOLLOW SELF to stop following someone else.\
+Use FOLLOW SELF to stop following someone else.  To force a \
+follower to stop following you, use NOFOLLOW <MOBNAME>\n\r\
 \n\r\
-To force a follower to stop following you, use NOFOLLOW <MOBNAME>\n\r\
+Ships and Caravans can also follow each other using this command, \
+so long as the follower is capable of keeping up.\n\r\
 \n\r\
 See also GROUP, NOFOLLOW, ORDER, FORMATION, and GTELL.
 
