@@ -129,7 +129,7 @@ anchor remains up, and there remains more sea to travel, the ship will continue 
 directions are more complex, you can use the COURSE [DIRECTION] [DIRECTION] ... command to give the ship \
 a series of directions to follow without supervision.\n\r\
 \n\r\
-See also help on SHIP_COMBAT
+See also help on SHIP_COMBAT, FOLLOW
 
 AIM=In combat, you do not normally need to aim.  Your weapon will automatically attack the target of your kill \
 command or your current enemy.  In ship tactical combat, however, the AIM command must be used to aim a specified \
