@@ -64,7 +64,8 @@
  63. New skills: Holy Mount, Unholy Mount, Rope Disarm, Armored Vanity, Mounted Leap
  64. TEAR/DESTROY can now be used to tear cloth into strips for bandaging or whatever
  65. New skills: Companion Mount, Hold The Line, Faithful Mount, Break Mount, Caravan Tactics
- 66. New skills: Caravan Tactics, Lucky Vanity 
+ 66. New skills: Lucky Vanity, Sweeping Trip, Ride to the Rescue
+ 67. Command FOLLOW can now be used with sailing ships and caravans.
  
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
